Closed Bug 401095 Opened 18 years ago Closed 17 years ago

ecma3/Math/e15_8_2_12:Infinity/Math.min(0,-0) testcase fails when running the release vm with the -Dinterp vm arg

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: brbaker, Unassigned)

References

Details

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.8) Gecko/20071008 Firefox/2.0.0.8 Build Identifier: 198:c54d42df101e FAILURES: ecma3/Math/e15_8_2_12.abc : Infinity/Math.min(0,-0) = Infinity FAILED! expected: -Infinity Reproducible: Always Steps to Reproduce: 1. run the test tests/ecma3/Math/e15_8_2_12.as with the release vm while passing in the -Dinterp switch Actual Results: Infinity/Math.min(0,-0) = Infinity Expected Results: Infinity/Math.min(0,-0) = -Infinity
Mark the testcase as an expectedfail until this has been addressed.
Attachment #286970 - Flags: review?(dschaffe)
Attachment #286970 - Flags: review?(dschaffe) → review+
submitted patch for marking testcase as expected fail when running in -interp mode. Ran tests in jit and interp to confirm.
This is caused by the wrong implementation of MathClass::min() in MathClass.cpp. "if(y < x)" can not compare +0.0 and -0.0. Mozilla js engine has a correct version of min max. http://lxr.mozilla.org/mozilla/source/js/src/jsmath.c#270
Attached patch patchSplinter Review
I have tested it on mac, linux, solaris and windows. I don't have arm so I just guess it is right.
Attachment #311988 - Flags: review?(treilly)
That appears to be an expedient and correct fix. (It's how I would have done it too.)
Attachment #311988 - Flags: review?(treilly) → review+
Seems there are a lot of failures in http://tamarin-builds.mozilla.org/tamarin-central/waterfall. Is that because I didn't remove the testcase from testconfig.txt?
Attachment #312216 - Flags: review?(dschaffe)
Attachment #312216 - Flags: review+
Pushed in the patch as 489:723a002c9012
Thanks Brent.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Attachment #312216 - Flags: review?(dschaffe)
Status: RESOLVED → VERIFIED
Flags: in-testsuite+
Flags: flashplayer-triage+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: