Bug 401095 ecma3/Math/e15_8_2_12:Infinity/Math.min(0,-0) testcase fails when running the release vm with the -Dinterp vm arg. treilly: review+